# TaggerService

./: Dockerfile  README.md  deepbooru_cli.py  docker-compose.yml  main.py  pyproject.toml  reg.py  requirements.txt  server.py  start.sh
modules/: category.py  cliptagger2.py  deepbooru.py  share.py  tagger.py  wd14.py
service/: tagger_service.py
